--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   color: var(--color-text-primary);
   font-size: 16px;
   line-height: 1.5;
-  background-color: var(--color-grey-light);
+  background: var(--gradient-primary);
 }
 
 .page {
@@ -14,7 +14,8 @@ body {
   padding: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 32px;
+  /* justify-content: space-between; */
 }
 
 header {
@@ -24,9 +25,69 @@ header {
   gap: 16px;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.main__table {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.main__form {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.form__item {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+input {
+  padding: 4px;
+  border-radius: 4px;
+}
+
+.wrapper {
+  display: flex;
+  gap: 16px;
+  justify-content: space-evenly;
+}
+
+.form__buttons {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.main__actions {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.actions__place-id {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
 footer {
   display: flex;
   justify-content: center;
   column-gap: 32px;
   flex-wrap: wrap;
+  margin-top: auto;
+}
+
+.btn {
+  padding: 6px 4px;
+  border-radius: 6px;
+  cursor: pointer;
 }
